syntax = "proto3";

import "google/protobuf/empty.proto";

package abforce;

option go_package=".;server";

service ABruteforce {
  rpc Auth(AuthRequest) returns (AuthResponse) {}
  rpc Reset(ResetRequest) returns (google.protobuf.Empty) {}
  rpc AddToWhiteList(AddNetMaskRequest) returns (AddNetMaskResponse) {}
  rpc RemoveFromWhiteList(RemoveNetMaskRequest) returns (google.protobuf.Empty) {}
  rpc AddToBlackList(AddNetMaskRequest) returns (AddNetMaskResponse) {}
  rpc RemoveFromBlackList(RemoveNetMaskRequest) returns (google.protobuf.Empty) {}
}

message AuthRequest {
  string login = 1;
  string password = 2;
  string ip = 3;
}

message AuthResponse {
  bool ok = 1;
}

message ResetRequest {
  string login = 1;
  string password = 2;
  string ip = 3;
}

message AddNetMaskRequest {
  string ip = 1;
  string mask = 2;
}

message AddNetMaskResponse {
  string ip = 1;
  string mask = 2;
}

message RemoveNetMaskRequest {
  string ip = 1;
  string mask = 2;
}
